salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/Federal_Benefits_Intake__c.object-meta.xml
<CustomObject>
    <description>Federal Benefits Data Collection Form — replaces Precise FP intake. Stores annuity, TSP, insurance, and retirement analyzer data for federal employee prospects. SEC compliant. Linked to Lead/Contact.</description>
    <label>Federal Benefits Intake</label>
    <nameField>
        <displayFormat>FBI-{0000}</displayFormat>
        <label>Intake Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Federal Benefits Intakes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>