salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Advisor assigned to this intake</description>
    <label>Assigned Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Intakes</relationshipLabel>
    <relationshipName>Assigned_Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>