salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Advisor_Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Reviewed_Date__c</fullName>
    <description>When advisor completed review</description>
    <label>Advisor Reviewed Date</label>
    <type>DateTime</type>
</CustomField>