salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/AI_Parse_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Parse_Confidence__c</fullName>
    <description>Overall confidence score from AI document parsing</description>
    <label>AI Parse Confidence</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>