salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/AI_Parsed_Date__c.field-meta.xml
<CustomField>
    <fullName>AI_Parsed_Date__c</fullName>
    <description>When AI document parsing was completed</description>
    <label>AI Parsed Date</label>
    <type>DateTime</type>
</CustomField>