salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Break_In_Service_1_To__c.field-meta.xml
<CustomField>
    <fullName>Break_In_Service_1_To__c</fullName>
    <description>First break in civilian service end date</description>
    <label>Break in Service 1 To</label>
    <type>Date</type>
</CustomField>