salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Break_In_Service_2_From__c.field-meta.xml
<CustomField>
    <fullName>Break_In_Service_2_From__c</fullName>
    <description>Second break in civilian service start date</description>
    <label>Break in Service 2 From</label>
    <type>Date</type>
</CustomField>