salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Break_In_Service_2_To__c.field-meta.xml
<CustomField>
    <fullName>Break_In_Service_2_To__c</fullName>
    <description>Second break in civilian service end date</description>
    <label>Break in Service 2 To</label>
    <type>Date</type>
</CustomField>