salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/COLA_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>COLA_Adjustment__c</fullName>
    <description>Annual Cost of Living Annuity Adjustment from ESD</description>
    <label>Annual COLA Adjustment</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>