salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Contact record (post-conversion)</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Federal Benefits Intakes</relationshipLabel>
    <relationshipName>Federal_Benefits_Intakes_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>