salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Current_Annual_Salary__c.field-meta.xml
<CustomField>
    <fullName>Current_Annual_Salary__c</fullName>
    <description>Current annual salary from LES (includes base + locality for GS)</description>
    <label>Current Annual Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>