salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Deposit_Amount_Owed__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount_Owed__c</fullName>
    <description>Amount of deposit owed for period without contributions</description>
    <label>Deposit Amount Owed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>