salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Deposit_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Paid_Date__c</fullName>
    <description>When deposit was or will be paid</description>
    <label>Deposit Paid/Will Be Paid Date</label>
    <type>Date</type>
</CustomField>