salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Deposit_Period_From__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Period_From__c</fullName>
    <description>Start of period without retirement contributions</description>
    <label>Deposit Period From</label>
    <type>Date</type>
</CustomField>