salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Deposit_Period_To__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Period_To__c</fullName>
    <description>End of period without retirement contributions</description>
    <label>Deposit Period To</label>
    <type>Date</type>
</CustomField>