salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Desired_Retirement_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Retirement_Date__c</fullName>
    <description>Target retirement date</description>
    <label>Desired Retirement Date</label>
    <type>Date</type>
</CustomField>