salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Document_Upload_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_Upload_URL__c</fullName>
    <description>Secure Supabase upload link for this client</description>
    <label>Document Upload URL</label>
    <type>Url</type>
</CustomField>