salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Employee_Category__c.field-meta.xml
<CustomField>
    <fullName>Employee_Category__c</fullName>
    <description>Special employee category if applicable</description>
    <label>Employee Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Firefighter</fullName>
            </value>
            <value>
                <fullName>Law Enforcement</fullName>
            </value>
            <value>
                <fullName>Air Traffic Controller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>