salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Estimated_High_3_Increase__c.field-meta.xml
<CustomField>
    <fullName>Estimated_High_3_Increase__c</fullName>
    <description>Estimated high-3 increase per year if continuing to work</description>
    <label>Estimated High-3 Increase/Year</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>