salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Expected_Salary_Increase__c.field-meta.xml
<CustomField>
    <fullName>Expected_Salary_Increase__c</fullName>
    <description>Expected annual salary increase percentage</description>
    <label>Expected Salary Increase (Each Year)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>