salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Expense_Auto__c.field-meta.xml
<CustomField>
    <fullName>Expense_Auto__c</fullName>
    <description>Monthly auto expenses</description>
    <label>Expense: Auto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>