salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Expense_Credit__c.field-meta.xml
<CustomField>
    <fullName>Expense_Credit__c</fullName>
    <description>Monthly credit/debt payments</description>
    <label>Expense: Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>