salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Expense_Mortgage_Rent__c.field-meta.xml
<CustomField>
    <fullName>Expense_Mortgage_Rent__c</fullName>
    <description>Monthly mortgage or rent</description>
    <label>Expense: Mortgage/Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>