salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Expense_Other__c.field-meta.xml
<CustomField>
    <fullName>Expense_Other__c</fullName>
    <description>Other monthly expenses</description>
    <label>Expense: Other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>