salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/FedRetire_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>FedRetire_Report_Date__c</fullName>
    <description>When the FedRetireOnline report was generated</description>
    <label>FedRetireOnline Report Date</label>
    <type>DateTime</type>
</CustomField>