salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/FedRetire_Report_Generated__c.field-meta.xml
<CustomField>
    <fullName>FedRetire_Report_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the FedRetireOnline report has been generated</description>
    <label>FedRetireOnline Report Generated</label>
    <type>Checkbox</type>
</CustomField>