salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/FEGLI_Basic__c.field-meta.xml
<CustomField>
    <fullName>FEGLI_Basic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enrolled in FEGLI Basic</description>
    <label>FEGLI Basic</label>
    <type>Checkbox</type>
</CustomField>