salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/FEGLI_Basic_Reduce_65__c.field-meta.xml
<CustomField>
    <fullName>FEGLI_Basic_Reduce_65__c</fullName>
    <description>FEGLI Basic reduction at age 65</description>
    <label>FEGLI Basic Reduce at 65</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Reduction</fullName>
            </value>
            <value>
                <fullName>50% Reduction</fullName>
            </value>
            <value>
                <fullName>75% Reduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>