salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/FEGLI_Biweekly_Premium__c.field-meta.xml
<CustomField>
    <fullName>FEGLI_Biweekly_Premium__c</fullName>
    <description>FEGLI biweekly premium from LES</description>
    <label>FEGLI Biweekly Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>