salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/FEGLI_Option_A__c.field-meta.xml
<CustomField>
    <fullName>FEGLI_Option_A__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enrolled in FEGLI Option A</description>
    <label>FEGLI Option A</label>
    <type>Checkbox</type>
</CustomField>