salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/FEGLI_Option_B__c.field-meta.xml
<CustomField>
    <fullName>FEGLI_Option_B__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enrolled in FEGLI Option B</description>
    <label>FEGLI Option B</label>
    <type>Checkbox</type>
</CustomField>