salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/FEGLI_Option_B_Reduce_65__c.field-meta.xml
<CustomField>
    <fullName>FEGLI_Option_B_Reduce_65__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reduce FEGLI Option B at age 65?</description>
    <label>FEGLI Option B Reduce at 65</label>
    <type>Checkbox</type>
</CustomField>