salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/FEGLI_Option_C__c.field-meta.xml
<CustomField>
    <fullName>FEGLI_Option_C__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enrolled in FEGLI Option C</description>
    <label>FEGLI Option C</label>
    <type>Checkbox</type>
</CustomField>