salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/FEGLI_Option_C_Children__c.field-meta.xml
<CustomField>
    <fullName>FEGLI_Option_C_Children__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FEGLI Option C covers children</description>
    <label>FEGLI Option C Cover Children</label>
    <type>Checkbox</type>
</CustomField>