salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/FEGLI_Option_C_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>FEGLI_Option_C_Multiplier__c</fullName>
    <description>FEGLI Option C multiplier</description>
    <label>FEGLI Option C Multiplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1x</fullName>
            </value>
            <value>
                <fullName>2x</fullName>
            </value>
            <value>
                <fullName>3x</fullName>
            </value>
            <value>
                <fullName>4x</fullName>
            </value>
            <value>
                <fullName>5x</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>