salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/FEGLI_Option_C_Spouse__c.field-meta.xml
<CustomField>
    <fullName>FEGLI_Option_C_Spouse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FEGLI Option C covers spouse</description>
    <label>FEGLI Option C Cover Spouse</label>
    <type>Checkbox</type>
</CustomField>