salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/FEHB_Annual_Increase__c.field-meta.xml
<CustomField>
    <fullName>FEHB_Annual_Increase__c</fullName>
    <description>Average annual FEHB increase (trend 4-8%)</description>
    <label>FEHB Annual Increase (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>