salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/FEHB_Biweekly_Premium__c.field-meta.xml
<CustomField>
    <fullName>FEHB_Biweekly_Premium__c</fullName>
    <description>FEHB biweekly health insurance premium from LES</description>
    <label>FEHB Biweekly Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>