salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/FEHB_Enrollment_Type__c.field-meta.xml
<CustomField>
    <fullName>FEHB_Enrollment_Type__c</fullName>
    <label>FEHB Enrollment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Self Only</fullName><default>false</default><label>Self Only</label></value>
            <value><fullName>Self Plus One</fullName><default>false</default><label>Self Plus One</label></value>
            <value><fullName>Self and Family</fullName><default>false</default><label>Self and Family</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>