salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/FEHB_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>FEHB_Plan_Name__c</fullName>
    <label>FEHB Plan Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>