salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Fields_Needing_Review__c.field-meta.xml
<CustomField>
    <fullName>Fields_Needing_Review__c</fullName>
    <description>List of fields flagged by AI for manual review</description>
    <label>Fields Needing Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>