salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Filing_Status__c.field-meta.xml
<CustomField>
    <fullName>Filing_Status__c</fullName>
    <label>Filing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Single</fullName><default>false</default><label>Single</label></value>
            <value><fullName>Married Filing Jointly</fullName><default>false</default><label>Married Filing Jointly</label></value>
            <value><fullName>Married Filing Separately</fullName><default>false</default><label>Married Filing Separately</label></value>
            <value><fullName>Head of Household</fullName><default>false</default><label>Head of Household</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>