salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Has_DD214__c.field-meta.xml
<CustomField>
    <fullName>Has_DD214__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether DD214 record of military service is available</description>
    <label>Has DD214</label>
    <type>Checkbox</type>
</CustomField>