salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Has_Periods_No_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Has_Periods_No_Contributions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Were there periods when retirement contributions were not made?</description>
    <label>Periods Without Contributions</label>
    <type>Checkbox</type>
</CustomField>