salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Intake_Date__c.field-meta.xml
<CustomField>
    <fullName>Intake_Date__c</fullName>
    <description>Date the intake was initiated</description>
    <label>Intake Date</label>
    <type>Date</type>
</CustomField>