salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Investment_Income__c.field-meta.xml
<CustomField>
    <fullName>Investment_Income__c</fullName>
    <label>Investment Income (Annual)</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>