salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Is_Postal_Employee__c.field-meta.xml
<CustomField>
    <fullName>Is_Postal_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the employee a postal worker?</description>
    <label>Postal Employee</label>
    <type>Checkbox</type>
</CustomField>