salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Lead record</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Federal Benefits Intakes</relationshipLabel>
    <relationshipName>Federal_Benefits_Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>