salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Left_Service_Took_Funds__c.field-meta.xml
<CustomField>
    <fullName>Left_Service_Took_Funds__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did employee leave civilian service and withdraw retirement funds?</description>
    <label>Left Service &amp; Took Retirement Funds</label>
    <type>Checkbox</type>
</CustomField>