salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/LES_Allotment__c.field-meta.xml
<CustomField>
    <fullName>LES_Allotment__c</fullName>
    <description>Allotment deduction from LES</description>
    <label>LES: Allotment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>