salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/LES_Dental__c.field-meta.xml
<CustomField>
    <fullName>LES_Dental__c</fullName>
    <description>Dental deduction from LES</description>
    <label>LES: Dental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>