salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/LES_Federal_Tax__c.field-meta.xml
<CustomField>
    <fullName>LES_Federal_Tax__c</fullName>
    <description>Federal tax deduction from LES</description>
    <label>LES: Federal Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>