salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/LES_FSA__c.field-meta.xml
<CustomField>
    <fullName>LES_FSA__c</fullName>
    <description>FSA deduction from LES</description>
    <label>LES: Flexible Spending Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>