salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/LES_Medicare__c.field-meta.xml
<CustomField>
    <fullName>LES_Medicare__c</fullName>
    <description>Medicare deduction from LES</description>
    <label>LES: Medicare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>