salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/LES_Other_1__c.field-meta.xml
<CustomField>
    <fullName>LES_Other_1__c</fullName>
    <description>Other deduction 1 from LES</description>
    <label>LES: Other 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>