salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/LES_Retirement_Deduction__c.field-meta.xml
<CustomField>
    <fullName>LES_Retirement_Deduction__c</fullName>
    <description>Retirement deduction from LES</description>
    <label>LES: Retirement Deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>