salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/LES_SS_OASDI__c.field-meta.xml
<CustomField>
    <fullName>LES_SS_OASDI__c</fullName>
    <description>Social Security OASDI deduction from LES</description>
    <label>LES: Social Security (OASDI)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>