salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/LES_State_Tax__c.field-meta.xml
<CustomField>
    <fullName>LES_State_Tax__c</fullName>
    <description>State tax deduction from LES</description>
    <label>LES: State Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>