salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/LES_Vision__c.field-meta.xml
<CustomField>
    <fullName>LES_Vision__c</fullName>
    <description>Vision deduction from LES</description>
    <label>LES: Vision</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>