salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Living_Expenses_Total__c.field-meta.xml
<CustomField>
    <fullName>Living_Expenses_Total__c</fullName>
    <description>Total monthly living expenses</description>
    <label>Living Expenses (Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>