salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/LTC_Benefit_Period__c.field-meta.xml
<CustomField>
    <fullName>LTC_Benefit_Period__c</fullName>
    <description>Long Term Care benefit period</description>
    <label>LTC Benefit Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>5 Years</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>