salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/LTC_Daily_Benefit__c.field-meta.xml
<CustomField>
    <fullName>LTC_Daily_Benefit__c</fullName>
    <description>Long Term Care daily benefit amount</description>
    <label>LTC Daily Benefit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>