salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/LTC_Inflation_Protection__c.field-meta.xml
<CustomField>
    <fullName>LTC_Inflation_Protection__c</fullName>
    <description>Long Term Care inflation protection type</description>
    <label>LTC Inflation Protection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACI 5%</fullName>
            </value>
            <value>
                <fullName>ACI 4%</fullName>
            </value>
            <value>
                <fullName>FPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>