salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/LTC_Max_Lifetime_Benefit__c.field-meta.xml
<CustomField>
    <fullName>LTC_Max_Lifetime_Benefit__c</fullName>
    <description>Long Term Care maximum lifetime benefit</description>
    <label>LTC Maximum Lifetime Benefit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>