salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/LTC_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>LTC_Plan_Type__c</fullName>
    <description>Long Term Care plan type</description>
    <label>LTC Plan Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>