salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/LTC_Premium_Payment__c.field-meta.xml
<CustomField>
    <fullName>LTC_Premium_Payment__c</fullName>
    <description>Long Term Care monthly/biweekly premium</description>
    <label>LTC Premium Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>