salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/LTC_Start_Age__c.field-meta.xml
<CustomField>
    <fullName>LTC_Start_Age__c</fullName>
    <description>Age to start Long Term Care coverage</description>
    <label>LTC Start Coverage Age</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>