salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Military_Branch__c.field-meta.xml
<CustomField>
    <fullName>Military_Branch__c</fullName>
    <label>Military Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Army</fullName><default>false</default><label>Army</label></value>
            <value><fullName>Navy</fullName><default>false</default><label>Navy</label></value>
            <value><fullName>Air Force</fullName><default>false</default><label>Air Force</label></value>
            <value><fullName>Marines</fullName><default>false</default><label>Marines</label></value>
            <value><fullName>Coast Guard</fullName><default>false</default><label>Coast Guard</label></value>
            <value><fullName>Space Force</fullName><default>false</default><label>Space Force</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>