salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Military_Deposit_Paid__c.field-meta.xml
<CustomField>
    <fullName>Military_Deposit_Paid__c</fullName>
    <label>Military Deposit Paid</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>