salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Military_Service_From__c.field-meta.xml
<CustomField>
    <fullName>Military_Service_From__c</fullName>
    <description>Military service start date</description>
    <label>Military Service From</label>
    <type>Date</type>
</CustomField>