salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Military_Service_To__c.field-meta.xml
<CustomField>
    <fullName>Military_Service_To__c</fullName>
    <description>Military service end date</description>
    <label>Military Service To</label>
    <type>Date</type>
</CustomField>