salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Other_Pensions__c.field-meta.xml
<CustomField>
    <fullName>Other_Pensions__c</fullName>
    <label>Other Pensions (Annual)</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>