salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Other_TSP_Rollover__c.field-meta.xml
<CustomField>
    <fullName>Other_TSP_Rollover__c</fullName>
    <description>TSP monies rolled over to other accounts</description>
    <label>TSP Rollover Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>