salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Past_Salary_Increase__c.field-meta.xml
<CustomField>
    <fullName>Past_Salary_Increase__c</fullName>
    <description>Historical salary increase percentage</description>
    <label>Past Salary Increase</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>