salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Redeposit_Amount_Owed__c.field-meta.xml
<CustomField>
    <fullName>Redeposit_Amount_Owed__c</fullName>
    <description>Amount of redeposit owed</description>
    <label>Redeposit Amount Owed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>