salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Redeposit_Period_From__c.field-meta.xml
<CustomField>
    <fullName>Redeposit_Period_From__c</fullName>
    <description>Redeposit period start</description>
    <label>Redeposit Period From</label>
    <type>Date</type>
</CustomField>