salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Redeposit_Period_To__c.field-meta.xml
<CustomField>
    <fullName>Redeposit_Period_To__c</fullName>
    <description>Redeposit period end</description>
    <label>Redeposit Period To</label>
    <type>Date</type>
</CustomField>