salesforce/force-app/main/default/objects/Federal_Benefits_Intake__c/fields/Rental_Property_Income__c.field-meta.xml
<CustomField>
    <fullName>Rental_Property_Income__c</fullName>
    <description>Income from rental properties</description>
    <label>Rental Property Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>